fix: swagger 수정 보완
