# docs/swagger.json
@@ -13,12 +13,15 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "call GetMenus, return ok by json.",
+                "summary": "메뉴를 조회합니다.",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.Controller"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Menu"
+                            }
                         }
                     }
                 }
@@ -33,36 +36,15 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "call CreateOrder, return ok by json.",
+                "summary": "원하는 메뉴를 주문합니다.",
                 "parameters": [
                     {
-                        "description": "phone",
-                        "name": "phone",
+                        "description": "CreateOrderBody",
+                        "name": "CreateOrderBody",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "address",
-                        "name": "address",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "menuName",
-                        "name": "menuName",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/model.CreateOrderBody"
                         }
                     }
                 ],
@@ -70,7 +52,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.Controller"
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -85,18 +73,18 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "call GetOrderState, return ok by json.",
+                "summary": "주문 상태를 조회합니다.",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "phone",
+                        "description": "Phone",
                         "name": "phone",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "address",
+                        "description": "Address",
                         "name": "address",
                         "in": "query",
                         "required": true
@@ -106,7 +94,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.Controller"
+                            "type": "string"
                         }
                     }
                 }
@@ -121,7 +109,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "call AddOrder, return ok by json.",
+                "summary": "이미 전달한 주문을 수정합니다.",
                 "parameters": [
                     {
                         "type": "string",
@@ -129,13 +117,31 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "MenuName",
+                        "name": "MenuName",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.Controller"
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -148,7 +154,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "call AddOrder, return ok by json.",
+                "summary": "기존 주문에 새로운 주문을 추가합니다.",
                 "parameters": [
                     {
                         "type": "string",
@@ -162,7 +168,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.Controller"
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -177,7 +189,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "call GetReviews, return ok by json.",
+                "summary": "리뷰를 조회합니다.",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -197,7 +209,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "call CreateReview, return ok by json.",
+                "summary": "리뷰를 작성합니다.",
                 "parameters": [
                     {
                         "type": "string",
@@ -205,13 +217,22 @@
                         "name": "orderId",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "CreateReviewBody",
+                        "name": "CreateReviewBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.CreateReviewBody"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.Controller"
+                            "type": "string"
                         }
                     }
                 }
@@ -226,60 +247,15 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "call NewMenu, return ok by json.",
+                "summary": "기존 메뉴에 새로운 메뉴를 추가합니다.",
                 "parameters": [
                     {
-                        "description": "name",
-                        "name": "name",
+                        "description": "Menu",
+                        "name": "Menu",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "canBeOrder",
-                        "name": "canBeOrder",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "boolean"
-                        }
-                    },
-                    {
-                        "description": "quantity",
-                        "name": "quantity",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "description": "price",
-                        "name": "price",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "description": "origin",
-                        "name": "origin",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "todayRecommend",
-                        "name": "todayRecommend",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "boolean"
+                            "$ref": "#/definitions/model.Menu"
                         }
                     }
                 ],
@@ -287,7 +263,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.Controller"
+                            "type": "string"
                         }
                     }
                 }
@@ -302,7 +278,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "call DeleteMenu, return ok by json.",
+                "summary": "메뉴를 삭제합니다.",
                 "parameters": [
                     {
                         "type": "string",
@@ -316,7 +292,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.Controller"
+                            "type": "string"
                         }
                     }
                 }
@@ -329,7 +305,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "call UpdateMenu, return ok by json.",
+                "summary": "기존 메뉴를 수정합니다.",
                 "parameters": [
                     {
                         "type": "string",
@@ -339,39 +315,12 @@
                         "required": true
                     },
                     {
-                        "description": "canBeOrder",
-                        "name": "canBeOrder",
+                        "description": "Menu",
+                        "name": "Menu",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "boolean"
-                        }
-                    },
-                    {
-                        "description": "price",
-                        "name": "price",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "description": "origin",
-                        "name": "origin",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "todayRecommend",
-                        "name": "todayRecommend",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "boolean"
+                            "$ref": "#/definitions/model.Menu"
                         }
                     }
                 ],
@@ -379,7 +328,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.Controller"
+                            "type": "string"
                         }
                     }
                 }
@@ -394,12 +343,12 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "call GetOrders, return ok by json.",
+                "summary": "전체 주문을 조회합니다.",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.Controller"
+                            "type": "string"
                         }
                     }
                 }
@@ -414,7 +363,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "call UpdateOrderState, return ok by json.",
+                "summary": "주문 받은 상태를 업데이트합니다.",
                 "parameters": [
                     {
                         "type": "string",
@@ -428,7 +377,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.Controller"
+                            "type": "string"
                         }
                     }
                 }
@@ -438,6 +387,77 @@
     "definitions": {
         "controller.Controller": {
             "type": "object"
+        },
+        "model.CreateOrderBody": {
+            "type": "object",
+            "required": [
+                "address",
+                "menuName",
+                "phone"
+            ],
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "menuName": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "phone": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.CreateReviewBody": {
+            "type": "object",
+            "properties": {
+                "isRecommend": {
+                    "type": "boolean"
+                },
+                "review": {
+                    "type": "string"
+                },
+                "score": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.Menu": {
+            "type": "object",
+            "properties": {
+                "canBeOrder": {
+                    "type": "boolean"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "isDeleted": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "origin": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "todayRecommend": {
+                    "type": "boolean"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
         }
     }
 }
